# solana-auditor-skill

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MEMORY.md  PRD.md  README.md  SKILL.md  VERIFICATION.md  agentdb.rvf  comparison.dashboard.html  demo.sh  formal_verification_report.json  install.sh  kanban.md  learnings.md  pyproject.toml  requirements-dev.txt  ruvector.db  skill-registry.json  spec.md  todo.md
.claude/worktrees/v1.5-world-class/examples/sample-vulnerable-program/programs/vault/: Cargo.toml
.claude/worktrees/v1.5-world-class/examples/sample-vulnerable-program/programs/vault/src/: lib.rs
.github/: AUDIT_WORKFLOW.md
.swarm/: memory.db  memory.db-shm  memory.db-wal  schema.sql
agents/: architecture-reviewer.md  auditor.md  economic-security-analyst.md  formal-verifier.md  orchestrator.md  report-writer.md  safety-guard.md  threat-modeler.md
audit-report/: findings.json  kamino-lend-audit-v2.md
benchmarks/: README.md  RESULTS.md
commands/: audit-findings.md  audit-fix.md  audit-history.md  audit-poc.md  audit-pr.md  audit-quick.md  audit-report.md  audit-resume.md  audit.md
data/: exploits.json
examples/: real-world-audit-results.md
examples/sample-vulnerable-program/programs/token-extensions/: Cargo.toml
examples/sample-vulnerable-program/programs/token-extensions/src/: lib.rs
examples/token-2022-real/: Cargo.toml
examples/token-2022-real/audit-output/: AUDIT_REPORT.md  findings.json  methodology-trace.md  quick-scan-results.md
examples/token-2022-real/src/: lib.rs
gan-harness/: audit-dashboard.html  eval-rubric.md  spec.md
klend/libs/klend-interface/: Cargo.toml  LICENSE  README.md
klend/libs/klend-interface/docs/: cpi_deposit_and_borrow.rs
klend/libs/klend-interface/examples/: borrow.rs  deposit_borrowing.rs  deposit_lending.rs  flash_loan.rs  market_data.rs  redeem_ctokens.rs  repay.rs  user_position.rs  withdraw_obligation.rs
klend/libs/klend-interface/src/: discriminators.rs  errors.rs  fraction.rs  lib.rs  pda.rs  types.rs  util.rs
klend/libs/klend-interface/src/helpers/: borrow.rs  common.rs  compound.rs  context.rs  deposit.rs  flash.rs  info.rs  lifecycle.rs  liquidate.rs  mod.rs  obligation.rs  refresh.rs  repay.rs  withdraw.rs  withdraw_queue.rs
klend/libs/klend-interface/src/instructions/: admin.rs  borrow.rs  compound.rs  deposit.rs  flash.rs  liquidate.rs  mod.rs  obligation.rs  orders.rs  referrer.rs  refresh.rs  repay.rs  withdraw.rs  withdraw_queue.rs
klend/libs/klend-interface/src/state/: common.rs  global_config.rs  lending_market.rs  mod.rs  obligation.rs  permissioning.rs  pod.rs  referral.rs  reserve.rs  withdraw_ticket.rs
klend/libs/klend-interface/tests/integration/: mod.rs  pyth.rs  setup.rs  test_borrow_repay.rs  test_deposit.rs  test_flash_loan.rs  test_from_account_data.rs  test_helpers.rs  test_init.rs  test_multi_reserve.rs  test_obligation_context.rs  test_refresh_batch.rs  test_withdraw.rs
package/: install.sh  manifest.json
prompts/: bug-fixer-agent.md
references/: LIMITATIONS.md
rules/: audit.rules  sast-patterns.json
scripts/: audit-fix-suggestions.py  audit-report.py  create-contest-zip.sh  dashboard.py  export-sarif.py  find-programs.py  findings-to-sarif.py  fix-verification.sh  fix_confidence.py  fix_constants.py  fix_exploit.py  fix_models.py  fix_regression.py  fix_templates.py  generate-cpi-graph.sh  generate-ext-symlinks.sh  pre-commit-audit.sh  protocol-fingerprint.sh  qed-integration.sh  run-anchor-tests.py  run-formal-verification.py  run-sast.py  sarif_core.py  toolchain-detector.py  triage-findings.py
skill/: 00-safety-guard.md  01-recon.md  01B-architecture-review.md  01C-economic-security.md  02-threat-modeling.md  02B-runtime-testing.md  03-formal-verification.md  04-findings-triage.md  05-report-generation.md  06-remediation.md  SKILL.md  SPEC-REMEDIATION.md
skills/: SKILL.md
templates/: dashboard.html
tests/: conftest.py  severity_counts.py  skill-integrity-lib.sh  test-formal-verification.sh  test-skill-integrity.sh  test_fix_confidence.py  test_fix_constants.py  test_fix_exploit.py  (+6 more)
(+292 files in other folders)
