[package]
name = "token-extensions"
version = "0.1.0"
description = "Sample Token-2022 program with intentional vulnerabilities for solana-auditor-skill"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token-2022"] }
spl-token-2022 = { version = "6.0", features = ["serde"] }
solana-program = "2.3"
